discussion/kv_engine/125164/125164_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Change MagmaRequest getKey & getKeyLen function names

These are getting confused with IORequest equivalents.

Change-Id: Ife94dd2425a8587321b78ecd7d5e6663a89daf31

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-09 00:00:30.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-09 01:01:03.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23478/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23478/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27446/ : FAILURE

Failure of a CTest test 161/383 Test #153: ep-engine_ep_unit_tests.PersistentAndEphemeral/ConnectionTest ................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27446/ )

Failure of a GoogleTest test:

PersistentAndEphemeral/ConnectionTest.test_maybesendnoop_noop_already_pending/5, where GetParam() = ("persistentMagma", "full_eviction") (37 ms) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27446/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1654/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:46:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:50:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1654/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1654/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3075/ : FAILURE

Failure of a CTest test [2020-04-09T00:16:51.468Z] 191/400 Test #179: ep-engine_ep_unit_tests.EphemeralOrPersistent/STParameterizedBucketTest ..................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3075/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/175/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3066/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3131/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10929/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2124/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-09 07:38:21.000000000
Message: 
Patch Set 8:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23478/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23478/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27446/ : FAILURE

Failure of a CTest test 161/383 Test #153: ep-engine_ep_unit_tests.PersistentAndEphemeral/ConnectionTest ................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27446/ )

Failure of a GoogleTest test:

PersistentAndEphemeral/ConnectionTest.test_maybesendnoop_noop_already_pending/5, where GetParam() = ("persistentMagma", "full_eviction") (37 ms) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27446/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3075/ : FAILURE

Failure of a CTest test [2020-04-09T00:16:51.468Z] 191/400 Test #179: ep-engine_ep_unit_tests.EphemeralOrPersistent/STParameterizedBucketTest ..................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3075/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1658/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:46:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:50:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1658/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1658/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/175/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3066/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3131/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10929/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2124/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-09 09:57:24.000000000
Message: 
Patch Set 8: Code-Review+2

(1 comment)
Line:45, engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h -> nit: prefer getRawKeyLen/getRawKey

----------------------------------------------------------------------------------------------------------------------
